# ivantk

./: CMakeLists.txt  Copyright.txt  IVANConfig.cmake.in  IVANIncludeDirectories.cmake  LICENSE  README  UseIVAN.cmake.in  ivanCMakeMacros.cmake  ivanConfigure.h.in  mistGenerateIVANConfig.cmake
Sources/Common/: CMakeLists.txt  ivanAngularValue.h  ivanGlobals.h  ivanGraphCountNodeVisitor.hxx  ivanGraphNode.cxx  ivanGraphNode.h  ivanGraphNodeVisitor.cxx  ivanGraphNodeVisitor.h  ivanGraphNodeVisitorDispatcher.h  ivanImage3DPlaneFunctionToCostFunctionAdaptor.h  ivanImage3DPlaneFunctionToCostFunctionAdaptor.hxx  ivanImageFunctionToCostFunctionAdaptor.h  ivanImageFunctionToCostFunctionAdaptor.hxx  ivanImageToVesselDataObjectFilter.h  ivanImageToVesselDataObjectFilter.hxx  ivanMacros.h  ivanVesselCommon.h  ivanVesselDataObject.h  ivanVesselDataObjectSource.h  ivanVesselDataObjectSource.hxx
Sources/Detection/: CMakeLists.txt  ivanCircularSectionFluxImageFunction.h  ivanCircularSectionFluxImageFunction.hxx  ivanDiscreteGradientGaussianImageFunction.h  ivanDiscreteGradientGaussianImageFunction.hxx  ivanDiscreteHessianGaussianImageFunction.h  ivanDiscreteHessianGaussianImageFunction.hxx  ivanFilterByEigenValuesVesselnessImageFunction.h  ivanFilterByEigenValuesVesselnessImageFunction.hxx  ivanFilterByEigenvaluesVesselnessImageFunction.h  ivanFilterByEigenvaluesVesselnessImageFunction.hxx  ivanFluxBasedVesselnessImageFunction.h  ivanFluxBasedVesselnessImageFunction.hxx  ivanFrangiVesselnessImageFunction.h  ivanFrangiVesselnessImageFunction.h.old  ivanFrangiVesselnessImageFunction.hxx  ivanFrangiVesselnessImageFunction.txx.old  ivanGaussianDerivativeOperator.h  ivanGaussianDerivativeOperator.hxx  ivanHessianBasedVesselnessImageFunction.h  ivanHessianBasedVesselnessImageFunction.hxx  ivanHessianEigenValuesImageFunction.h  ivanHessianEigenValuesImageFunction.hxx  ivanHessianOnlyBasedVesselnessImageFunction.h  ivanHessianOnlyBasedVesselnessImageFunction.hxx  ivanImageFunctionBasedImageFilter.h  ivanImageFunctionBasedImageFilter.hxx  ivanImageFunctionInitializerBase.h  ivanMultiscaleAnalysisImageFilter.h  ivanMultiscaleAnalysisImageFilter.hxx  ivanMultiscaleAnalysisImageFilter.txx  ivanMultiscaleImageFunction.h  ivanMultiscaleImageFunction.hxx  ivanMultiscaleMedialnessImageFilter.h  ivanMultiscaleMedialnessImageFilter.hxx  ivanMultiscaleMedialnessImageFilter.txx  ivanNonLinearSteerableFluxImageFunction.h  ivanNonLinearSteerableFluxImageFunction.hxx  ivanObjectnessMeasureImageFunction.h  ivanObjectnessMeasureImageFunction.hxx  (+16 more)
Sources/Extraction/: CMakeLists.txt  ivanBSplineVesselCenterlineInterpolator.h  ivanBSplineVesselCenterlineInterpolator.hxx  ivanCylindricalOffsetMedialnessVesselSectionFitCostFunction.h  ivanCylindricalOffsetMedialnessVesselSectionFitCostFunction.hxx  ivanFixedScaleHessianBasedVesselSectionEstimator.h  ivanFixedScaleHessianBasedVesselSectionEstimator.hxx  ivanFixedScaleOOFBasedVesselSectionEstimator.h  ivanFixedScaleOOFBasedVesselSectionEstimator.hxx  ivanImageBasedVesselSectionEstimator.h  ivanImageBasedVesselSectionEstimator.hxx  ivanImageBasedVesselSectionFitCostFunction.h  ivanImageBasedVesselSectionFitCostFunction.hxx  ivanMaxIterationsVesselTrackerEndCondition.h  ivanMultiscaleAdaptiveHessianBasedVesselSectionEstimator.h  ivanMultiscaleAdaptiveHessianBasedVesselSectionEstimator.hxx  ivanMultiscaleAdaptiveOOFBasedVesselSectionEstimator.h  ivanMultiscaleAdaptiveOOFBasedVesselSectionEstimator.hxx  ivanMultiscaleFromImageHessianBasedVesselSectionEstimator.h  ivanMultiscaleFromImageHessianBasedVesselSectionEstimator.hxx  ivanMultiscaleFromRadiusHessianBasedVesselSectionEstimator.h  ivanMultiscaleFromRadiusHessianBasedVesselSectionEstimator.hxx  ivanMultiscaleHessianBasedVesselSectionEstimator.h  ivanMultiscaleHessianBasedVesselSectionEstimator.hxx  ivanMultiscaleOOFBasedVesselSectionEstimator.h  ivanMultiscaleOOFBasedVesselSectionEstimator.hxx  ivanMultiscaleTensorBasedVesselSectionEstimator.h  ivanMultiscaleTensorBasedVesselSectionEstimator.hxx  ivanMultiscaleVesselSectionEstimator.h  ivanMultiscaleVesselSectionEstimator.hxx  ivanOffsetMedialnessVesselSectionFitCostFunction.h  ivanOffsetMedialnessVesselSectionFitCostFunction.hxx  ivanOptimizedVesselSectionEstimator.h  ivanOptimizedVesselSectionEstimator.hxx  ivanOptimizedVesselnessBasedSearchVesselTrackerFilter.h  ivanOptimizedVesselnessBasedSearchVesselTrackerFilter.hxx  ivanOptimizerIterationCommand.h  ivanVesselSectionEstimator.h  ivanVesselSectionEstimator.hxx  ivanVesselSectionFitCostFunction.h  (+9 more)
Sources/ITK/: CMakeLists.txt  itkAdditiveGaussianNoiseImageFilter.h  itkAdditiveGaussianNoiseImageFilter.txx  itkDiscreteGaussianDerivativeImageFilter.h  itkDiscreteGaussianDerivativeImageFilter.hxx  itkDiscreteGaussianDerivativeImageFunction.h  itkDiscreteGaussianDerivativeImageFunction.hxx  itkDiscreteGradientMagnitudeGaussianImageFunction.h  itkDiscreteGradientMagnitudeGaussianImageFunction.hxx  itkDiscreteHessianGaussianImageFunction.h  itkDiscreteHessianGaussianImageFunction.hxx  itkGaussianDerivativeOperator.h  itkGaussianDerivativeOperator.hxx  itkThreadSafeMersenneTwisterRandomVariateGenerator.cxx  itkThreadSafeMersenneTwisterRandomVariateGenerator.h
Sources/Modelling/: CMakeLists.txt  ivanAneurysmModel.cxx  ivanAorticAneurysmVesselSection.hxx  ivanCircularVesselSection.h  ivanCompositeNode.cxx  ivanLinearPropertyInterpolator.h  ivanLinearVesselCenterlineInterpolator.h  ivanLinearVesselCenterlineInterpolator.hxx  ivanNullVesselSectionStruct.h  ivanSearchByIdNodeVisitor.cxx  ivanSearchByIdNodeVisitor.h  ivanStenosisModel.cxx  ivanStenosisModel.h  ivanUniformRadialContour.h  ivanVesselBifurcationNode.h  ivanVesselBranchNodeVisitor.h  ivanVesselCenterline.h  ivanVesselCenterlineAlgorithmVisitor.h  ivanVesselCenterlineMetricsCalculatorVisitor.h  ivanVesselElementNode.h  ivanVesselElementNode.hxx  ivanVesselFeatureModel.cxx  ivanVesselFeatureModel.h  ivanVesselGraph.h  ivanVesselNode.cxx  ivanVesselRegion.cxx  (+1 more)
Utilities/: CMakeLists.txt  GaussianNoiseAdder.cxx
Visualization/: CMakeLists.txt  VTKVesselTrackerPlotter.cxx
(+352 files in other folders)
